tests/baselines/reference/noImplicitOverridePragma1.errors.txt
tests/cases/conformance/pragma/noImplicitOverride/file1.ts(6,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'A'.
tests/cases/conformance/pragma/noImplicitOverride/file2.ts(6,5): error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'A'.


==== tests/cases/conformance/pragma/noImplicitOverride/file1.ts (1 errors) ====
    // @ts-noImplicitOverride
    export class A {
        method() {}
    }
    export class B extends A {
        method() {}
        ~~~~~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'A'.
    }
    export class C extends A {
        override method() {}
    }
    
==== tests/cases/conformance/pragma/noImplicitOverride/file2.ts (1 errors) ====
    // @ts-noImplicitOverride true
    export class A {
        method() {}
    }
    export class B extends A {
        method() {}
        ~~~~~~
!!! error TS4114: This member must have an 'override' modifier because it overrides a member in the base class 'A'.
    }
    export class C extends A {
        override method() {}
    }
    
==== tests/cases/conformance/pragma/noImplicitOverride/file3.ts (0 errors) ====
    // @ts-noImplicitOverride false
    export class A {
        method() {}
    }
    export class B extends A {
        method() {}
    }
    export class C extends A {
        override method() {}
    }
    
==== tests/cases/conformance/pragma/noImplicitOverride/file4.ts (0 errors) ====
    export class A {
        method() {}
    }
    export class B extends A {
        method() {}
    }
    export class C extends A {
        override method() {}
    }